tests/parser/errors/scenedec_no_rbrace.gbl
scene s {
	var a = 1;
